# SRImageReconstruction_GAN_dermatology

./: README.md  bash_to_write.txt  datasets.txt  derma.ipynb  files_deleted_per_label.json  files_selected_per_label.json  toDo.txt
DermaSR_package/: __init__.py  artifacts.py  augmentation.py  paired.py  utils.py
Documents/: Pipeline_def.txt  ToDo.txt
Scripts/: artifacts_solver_testSet.py  dataset_1_selected.py  dataset_2_noArtifact.py  dataset_2_noArtifact_old.py  dataset_3_paired.py  dataset_3_paired_old.py  dataset_4_trainVal.py  dataset_5_metrics.py  metrics.ipynb  paired_dataset.py  real_ESRGAN_imProc.py  visualization_reorder.py
Scripts/cpp/: CMakeLists.txt  main.cpp
backup/: dataset_1_selected.py  select_CCimages.py  testSet_unpacking_images.py
cpp/: preprocessing.cpp
dermasr/: __init__.py
iqa/: iqa_metrics_testSets.m  iqa_metrics_valSets.m
new_scripts/: artifacts_solver.py  dataset_3_paired_old.py  dataset_4_testSet.py  dataset_4_trainVal.py  metrics_iqa.py  utils_delete_files.py  utils_move_files.py
pipeline/: artifacts_solver.py  artifacts_solver_testSet.py  augmentation_solver.py  dataset_recreate_label_information.py  paired_solver.py  paired_solver_testSet.py
presentation/: presentazione_domi.pptx  presentazione_infografica_utile.pptx  presentazione_tesi_domi.pptx
real_esrgan/: README.md  finetune_realesrgan_derma_pairdata.yml  inference_realesrgan_derma.py
texture_analysis/: dermaRadiomics.py  dermaTextureAnalysis.yaml  plot_images_YCbCr.ipynb
tutorial/: create_LR_HR_images.py  create_augmented_images.py  create_noArtifacts.py  (+3 more)
(+33 files in other folders)
